// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "srcSet": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "toString": [Function],
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
  "srcSet": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg 500w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
  "srcSet": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/8b1d7d4d688417adcd8603807f44314e-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/0884176ab3183a7809908a89735a26f2-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/654f812ac2833fdf5dae880cceefa8c6-1000x900.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/test/8b1d7d4d688417adcd8603807f44314e-500x450.jpg",
  "srcSet": "foobar/test/8b1d7d4d688417adcd8603807f44314e-500x450.jpg 500w,foobar/test/0884176ab3183a7809908a89735a26f2-750x675.jpg 750w,foobar/test/654f812ac2833fdf5dae880cceefa8c6-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg",
      "width": 100,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg",
  "srcSet": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/47b5a3359ed0722769a9888e5d22054a-200.jpg",
      "width": 200,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg",
  "srcSet": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg 100w,foobar/47b5a3359ed0722769a9888e5d22054a-200.jpg 200w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`png 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/09ebde7f5c9dce3efa4f410ad72b4c3f-500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/f677a14b0ff11b0fa0788e2a52884e1c-513.png",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/09ebde7f5c9dce3efa4f410ad72b4c3f-500.png",
  "srcSet": "foobar/09ebde7f5c9dce3efa4f410ad72b4c3f-500.png 500w,foobar/f677a14b0ff11b0fa0788e2a52884e1c-513.png 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/f0ca0d1b9ad58dfea6e8bc88b51a95d7-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/9affb0e18b367d321029cb1d539517fd-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/f0ca0d1b9ad58dfea6e8bc88b51a95d7-500.jpg",
  "srcSet": "foobar/f0ca0d1b9ad58dfea6e8bc88b51a95d7-500.jpg 500w,foobar/9affb0e18b367d321029cb1d539517fd-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 2`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/f0ca0d1b9ad58dfea6e8bc88b51a95d7-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/9affb0e18b367d321029cb1d539517fd-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/f0ca0d1b9ad58dfea6e8bc88b51a95d7-500.jpg",
  "srcSet": "foobar/f0ca0d1b9ad58dfea6e8bc88b51a95d7-500.jpg 500w,foobar/9affb0e18b367d321029cb1d539517fd-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
  "srcSet": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 540,
  "images": Array [
    Object {
      "height": 540,
      "path": "foobar/52dba34908ff9d9ed720ad3c51e5b651-600.jpg",
      "width": 600,
    },
    Object {
      "height": 630,
      "path": "foobar/86240606919a79fc3de5a7dbe5a97d87-700.jpg",
      "width": 700,
    },
    Object {
      "height": 720,
      "path": "foobar/f794cdac765d222d40585d283c49bddc-800.jpg",
      "width": 800,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/52dba34908ff9d9ed720ad3c51e5b651-600.jpg",
  "srcSet": "foobar/52dba34908ff9d9ed720ad3c51e5b651-600.jpg 600w,foobar/86240606919a79fc3de5a7dbe5a97d87-700.jpg 700w,foobar/f794cdac765d222d40585d283c49bddc-800.jpg 800w",
  "toString": [Function],
  "width": 600,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/86a90430aa0b6a9c877ba2e7560f348d-167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/84c4601d3d3e2fda34fb8cdd4743be8b-234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/652ca9fc84422fc0712297fe218d4bd7-300.jpg",
      "width": 300,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg",
  "srcSet": "foobar/bb319add04d2ce76039de36229ccfde4-100.jpg 100w,foobar/86a90430aa0b6a9c877ba2e7560f348d-167.jpg 167w,foobar/84c4601d3d3e2fda34fb8cdd4743be8b-234.jpg 234w,foobar/652ca9fc84422fc0712297fe218d4bd7-300.jpg 300w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
      "width": 500,
    },
    Object {
      "height": 600,
      "path": "foobar/24b8e1d900d0f26e0ac60c406f85c0ce-667.jpg",
      "width": 667,
    },
    Object {
      "height": 751,
      "path": "foobar/63dc049fe958369666cc1793fca64800-834.jpg",
      "width": 834,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
  "srcSet": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg 500w,foobar/24b8e1d900d0f26e0ac60c406f85c0ce-667.jpg 667w,foobar/63dc049fe958369666cc1793fca64800-834.jpg 834w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/0884176ab3183a7809908a89735a26f2-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx4BBQUFBwYHDggIDh4UERQeHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHv/AABEIACQAKAMBEQACEQEDEQH/xAGiAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgsQAAIBAwMCBAMFBQQEAAABfQECAwAEEQUSITFBBhNRYQcicRQygZGhCCNCscEVUtHwJDNicoIJChYXGBkaJSYnKCkqNDU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6g4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2drh4uPk5ebn6Onq8fLz9PX29/j5+gEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoLEQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/AMnW/wBnaO4v4hpWo2tjZFv3reWxkRfRVzhvqSMe9bukuhnzO1mUm/ZomXVIZF8Uxy2YbMiyWZD47AYYg/pU+yGpF3XP2aNIuYi+na7cWlwe5hDRn/gORj86p0kHMzl7j9nPxZo9za32karY6lJGcyxMDCf+A5JB49cVlUoOUWjajW9nNS7HfeDPg9ObqK+8VyQsiHcLKE5DEf327j2HX1rCjgrO8zvxGZuS5aa+Z7dPNBa20tzcyRwwRKXkkfhVUDJJ9K9A8g8i8TftB+D9MuXg0u1utXZODKn7mIn2LfMf++cVm6iQ1FkvgT48eG/EWsRaXe2E+kTXB2xSPKJIi3oTgEZ9cYoVVdQcWeqQ3thcY+z3dtNuO0bJFbJ9OD1rS6ESFAeOfoaAPFPFvw98dalod43iv4hNNYW8DyPHH+7jbaCfnwACOOpzWMozfUtOK6HzWbIu/wC7IlQAH5PmyOnPpWG6L2Z33w1+Geta217cBlsJ9PmEWy5Uq27GfTjginKN0JSsz1v4S/DS78N+NINakuIfJSNmuQX3GSYhh8vA4AYHPrmqpwfMmwlJWPbAVfkZA7iuoyM+70+0u7SW2u4FninUpJDJ8yOD1BB4NTuB5/rHwltZ/F9j4h0pbKxNsQJIBbDy3VfukKMYYcfp6VDp63Q0+5sa5pOssrxxqmbniS4jjw+4Dgkg5HAxntUzTYIs/C7Tdfg8O+X4ilea4S5kEczABpI88EgdO/4VVNO2o5W6HXeQVyQcitCSVVGc5NMBr5DcE1LASJiwYtzzTQErcKBng0wAdM9z1oA//9k=",
  "src": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
  "srcSet": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg 500w,foobar/0884176ab3183a7809908a89735a26f2-750.jpg 750w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/0884176ab3183a7809908a89735a26f2-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg",
  "srcSet": "foobar/8b1d7d4d688417adcd8603807f44314e-500.jpg 500w,foobar/0884176ab3183a7809908a89735a26f2-750.jpg 750w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;
